syntax = "proto3";

option csharp_namespace = "CsharpRPCLibrary.Grpc";

package account;

service AccountSrv{
    rpc UpdateUserOpenId(WechatInfoRequest) returns (SuccessReply) {}
    rpc UpdateUserSubStatus(WechatInfoRequest) returns (SuccessReply) {}
    rpc GetUserInfoByOpenId(WechatInfoRequest) returns (GetWechatInfoReply) {}
    rpc GetUserSubStatus(WechatInfoRequest) returns (GetWechatInfoReply) {}
    rpc GetWeeklyUsers(Empty) returns (GetWechatInfoList) {}
}
message Empty {
}

message SuccessReply {
  bool Success = 1;
}

message WechatInfoRequest {
    int32 UserId = 1;  // 用户ID
    string OpenId = 2; // OpenID
    bool status = 3;   // true:订阅 false:不订阅
}

message GetWechatInfoReply {
    int32 UserId = 1;
    string NickName = 2;
    string OpenId = 3;
    bool SubStatus = 4;
}

message GetWechatInfoList {
    repeated GetWechatInfoReply List = 1;
}

